little fix with access map and mock tests for correction service